# swagger.yaml
@@ -163,6 +163,55 @@ paths:
           description: Internal server error.
           schema:
             $ref: "#/definitions/ErrorResponse"
+      security:
+        - Bearer: []
+
+    get:
+      summary: Get a business
+      description: Get details of a business by its unique identifier.
+      parameters:
+        - name: business_id
+          in: path
+          required: true
+          type: string
+          format: uuid
+          description: Unique identifier for the business.
+      responses:
+        200:
+          description: OK.
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+              data:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  result:
+                    type: object
+                    properties:
+                      business:
+                        $ref: "#/definitions/Business"
+        400:
+          description: Bad Request.
+          schema:
+            $ref: "#/definitions/BadRequestErrorResponse"
+        401:
+          description: Unauthorized.
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        404:
+          description: Not Found.
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        500:
+          description: Internal server error.
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+      security:
+        - Bearer: []
 
   /auth/signup:
     post:
